--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,27 +1,6 @@
 .main {
-    position: relative;
+    position: center;
     display: flex;
     padding: 20px;
 }
-.button {
-    width: 140px;
-    height: 80px;
-    padding: 20px;
-    border-radius: 20px 20px 20px 20px;
-}
-.span {
-    position: relative;
-    left: 80px;
-    top: 20px;
-}
-.input {
-    position: relative;
-    left: 200px;
-    height: 50px;
-    border-radius: 20px 20px 20px 20px;
-}
 
-.name {
-    padding: 10px;
-    display: grid;
-}
