--- a/src/hw3/Span.module.css
+++ b/src/hw3/Span.module.css
@@ -1,6 +1,7 @@
 .span {
     position: relative;
-    left: 80px;
-    top: 20px;
-    height: 250px;
+    top: 5px;
+    left: 30px;
+    font-size: xx-large;
+
 }
