--- a/src/hw3/Tuesday/Tuesday.css
+++ b/src/hw3/Tuesday/Tuesday.css
@@ -44,6 +44,9 @@
 }
 .todoList-tasks {
   font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
 }
 
 .delete {
@@ -51,4 +54,17 @@
   background-size: contain;
   cursor: pointer;
   padding: 7px;
+}
+.priority {
+  position: relative;
+  top: -20px;
+  left: 90px;
+  border: 3px solid darkslategrey;
+  border-radius: 5px;
+  display: flex;
+  width: 50px;
+  height: 70px;
+  flex-direction: column;
+  font-size: 17px;
+  font-family: Cambria;
 }
