--- a/src/hw3/Tuesday/Tuesday.css
+++ b/src/hw3/Tuesday/Tuesday.css
@@ -33,7 +33,7 @@
   height: 30px;
   border-radius: 5px;
 }
-.default {
+.default-header {
   border-color: lightpink;
   width: 120px;
   height: 30px;
